fix: top buttons freehand colour button completely visible

--- a/sketcho-confluence-editor/war/Sketcho_confluence_app.css
+++ b/sketcho-confluence-editor/war/Sketcho_confluence_app.css
@@ -117,6 +117,7 @@ body {
     z-index: 1001 !important;
     left: 40px;
     top: 10px;
+    width: 100%;
 }
 
 .toolbar {
